add techologies block

--- a/index.html
+++ b/index.html
@@ -30,7 +30,16 @@
                 <button class="generalInfo__button button-get-offer">Получить предложение</button>
                 <article class="generalInfo__wrapper-recall-time">
                     <img src="./blocks/img/phone.svg" alt="phone" class="button-call__img">
-                    Перезвоним в течении дня для консультации
+                    <span>Перезвоним в течении дня для консультации</span>
+                </article>
+            </section>
+            <section class="technologies">
+                <h3 class="technologies__title">эволюционные <span>технологии</span></h3>
+                <h4 class="technologies__subtitle">Технологии электромобиля в вилочном погрузчике</h4>
+                <img src="./blocks/technologies/img/img2.png" alt="img2" class="technologies__img">
+                <article class="technologies__wrapper-img">
+                    <img src="./blocks/technologies/img/img1.png" alt="img1" class="technologies__img">
+                    <div class="technologies__description">Корпус изготовлен из высокопрочной стали</div>
                 </article>
             </section>
         </main>
