--- a/index.html
+++ b/index.html
@@ -42,6 +42,20 @@
                     <div class="technologies__description">Корпус изготовлен из высокопрочной стали</div>
                 </article>
             </section>
+            <section class="engine">
+                <h3 class="engine__title">двигатель и АКБ</h3>
+                <ul class="engine__list">
+                    <li class="engine__list-item">1,5 часа составляет время зарядки</li>
+                    <li class="engine__list-item">Однократная потребляемая мощность АКБ 15 кВт/ч (30% экономия затрат на электроэнергию) </li>
+                    <li class="engine__list-item">Интеллектуальный контроль температуры</li>
+                    <li class="engine__list-item">Синхронный двигатель с постоянными магнитами</li>
+                    <li class="engine__list-item">Несколько режимов работы: ECO, STANDARD, POWER</li>
+                </ul>
+                <article class="engine__wrapper-img">
+                    <img src="./blocks/engine/img/engine.png" alt="двигатель" class="engine__img">
+   
+                </article>
+            </section>
         </main>
     </section>
 </body>
