--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <section  class="generalInfo__wrapper-btn">
                         <button class="generalInfo__button button-get-offer">Получить предложение</button>
                         <article class="generalInfo__wrapper-recall-time">
-                            <img src="./blocks/img/phone.svg" alt="phone" class="button-call__img">
+                            <img src="./blocks/img/phone.svg" alt="phone">
                             <span>Перезвоним в течении дня для консультации</span>
                         </article>  
                     </section>
