update styles for generalInfo and button-call blocks

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
         </header>
         <main class="main">
             <section class="generalInfo">
-                <article class="generalInfo__wrapper-imgs">
                     <img src="./blocks/generalInfo/img/small-loader.png" alt="погрузчик" class="generalInfo__img-small"/>
                     <img src="./blocks/generalInfo/img/large-loader.png" alt="погрузчик" class="generalInfo__img-large"/>
-                </article>
                 <article class="generalInfo__wrapper-text">
                     <h1 class="generalInfo__title">электромобильный вилочный погрузчик <span class="generalInfo__title_color">нового поколения SHANN</span></h1>
                     <h2 class="generalInfo__subtitle">Оставьте заявку и получите консультацию специалиста</h2>
@@ -41,11 +39,18 @@
             <section class="technologies">
                 <h3 class="technologies__title">эволюционные <span>технологии</span></h3>
                 <h4 class="technologies__subtitle">Технологии электромобиля в вилочном погрузчике</h4>
-                <img src="./blocks/technologies/img/img2.png" alt="img2" class="technologies__img">
-                <article class="technologies__wrapper-img">
-                    <img src="./blocks/technologies/img/img1.png" alt="img1" class="technologies__img">
-                    <div class="technologies__description">Корпус изготовлен из высокопрочной стали</div>
-                </article>
+                <section class="technologies__wrappers-imgs">
+                   <article class="technologies__wrapper-img">
+                        <img src="./blocks/technologies/img/img2.png" alt="img2" class="technologies__img">
+                    </article>
+                    <article class="technologies__wrapper-img">
+                        <img src="./blocks/technologies/img/img1.png" alt="img1" class="technologies__img">
+                        <div class="technologies__description">
+                            <img src="./blocks/technologies/img/arrow-left.svg" alt="стрелка влево" class="technologies__arrow-left">
+                            Корпус изготовлен из высокопрочной стали
+                        </div>
+                    </article>  
+                </section>
             </section>
             <section class="engine">
                 <h3 class="engine__title">двигатель <span class="engine__title_color">и АКБ</span> </h3>
