--- a/index.html
+++ b/index.html
@@ -53,18 +53,25 @@
                 </section>
             </section>
             <section class="engine">
+                <hr class="engine__line engine__line_first">
+                <hr class="engine__line engine__line_second">
+                <hr class="engine__line engine__line_third">
                 <h3 class="engine__title">двигатель <span class="engine__title_color">и АКБ</span> </h3>
-                <ul class="engine__list">
-                    <li class="engine__list-item">1,5 часа составляет время зарядки</li>
-                    <li class="engine__list-item">Однократная потребляемая мощность АКБ 15 кВт/ч (30% экономия затрат на электроэнергию) </li>
-                    <li class="engine__list-item">Интеллектуальный контроль температуры</li>
-                    <li class="engine__list-item">Синхронный двигатель с постоянными магнитами</li>
-                    <li class="engine__list-item">Несколько режимов работы: ECO, STANDARD, POWER</li>
-                </ul>
-                <article class="engine__wrapper-img">
-                    <img src="./blocks/engine/img/engine.png" alt="двигатель" class="engine__img">
-   
-                </article>
+                <section class="engine__wrapper-content">
+                    <article class="engine__wrapper-list">
+                        <ul class="engine__list">
+                            <li class="engine__list-item">1,5 часа составляет время зарядки</li>
+                            <li class="engine__list-item">Однократная потребляемая мощность АКБ 15 кВт/ч (30% экономия затрат на электроэнергию) </li>
+                            <li class="engine__list-item">Интеллектуальный контроль температуры</li>
+                            <li class="engine__list-item">Синхронный двигатель с постоянными магнитами</li>
+                            <li class="engine__list-item">Несколько режимов работы: ECO, STANDARD, POWER</li>
+                        </ul>
+                    </article>
+                    <article class="engine__wrapper-img">
+                        <img src="./blocks/engine/img/engine.png" alt="двигатель" class="engine__img">
+       
+                    </article>
+                </section>
             </section>
         </main>
     </section>
