--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>SHANN</title>
     <link rel="stylesheet" href="./fonts/styles/fonts.css">
     <link rel="stylesheet" href="./blocks/styles/styles.css">
 </head>
