use img for decors in generalInfo block

--- a/index.html
+++ b/index.html
@@ -1,70 +1,60 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SHANN</title>
-    <link rel="stylesheet" href="./fonts/styles/fonts.css" />
-    <link rel="stylesheet" href="./blocks/styles/styles.css" />
-  </head>
-  <body class="body">
-    <header class="header">
-      <div class="container">
-        <section class="header__content">
-          <img
-            src="./blocks/header/img/logo.svg"
-            alt="logo"
-            class="header__logo"
-          />
-          <article class="header__container">
-            <span class="header__phone-number">8 800 555 80 80</span>
-            <button class="header__button-call button-call">
-              <img
-                src="./blocks/img/phone.svg"
-                alt="phone"
-                class="button-call__img"
-              />
-              <span class="button-call__text"> Заказать звонок</span>
-            </button>
-          </article>
-        </section>
-      </div>
-    </header>
-    <main class="main">
-      <div class="container">
-        <section class="generalInfo">
-            <hr class="generalInfo__line generalInfo__line_first">
-            <!-- <hr class="generalInfo__line generalInfo__line_second">
-            <hr class="generalInfo__line generalInfo__line_third">
-            <hr class="generalInfo__line generalInfo__line_fourth"> -->
-          <img
-            src="./blocks/generalInfo/img/loader.png"
-            alt="погрузчик"
-            class="generalInfo__img"
-          />
-          
-          <article class="generalInfo__wrapper-text">
-            <h1 class="generalInfo__title">
-              электромобильный вилочный погрузчик
-              <span class="generalInfo__title_color"
-                >нового поколения SHANN</span
-              >
-            </h1>
-            <h2 class="generalInfo__subtitle">
-              Оставьте заявку и получите консультацию специалиста
-            </h2>
-            <section class="generalInfo__wrapper-btn">
-              <button class="generalInfo__button button-get-offer">
-                Получить предложение
+<html lang="ru">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SHANN</title>
+  <link rel="stylesheet" href="./fonts/styles/fonts.css" />
+  <link rel="stylesheet" href="./blocks/styles/styles.css" />
+</head>
+
+<body class="body">
+
+  <main class="main">
+    <section class="generalInfo">
+      <div class="header">
+        <div class="container">
+          <section class="header__content">
+            <img src="./blocks/header/img/logo.svg" alt="logo" class="header__logo" />
+            <article class="header__container">
+              <span class="header__phone-number">8 800 555 80 80</span>
+              <button class="header__button-call button-call">
+                <img src="./blocks/img/phone.svg" alt="phone" class="button-call__img" />
+                <span class="button-call__text"> Заказать звонок</span>
               </button>
-              <article class="generalInfo__wrapper-recall-time">
-                <img src="./blocks/img/phone.svg" alt="phone" />
-                <span>Перезвоним в течении дня для консультации</span>
-              </article>
-            </section>
-          </article>
-        </section>
-        <section class="technologies">
+            </article>
+          </section>
+        </div>
+        </в>
+        <div class="container">
+          <div class="generalInfo__content">
+            <img src="./blocks/generalInfo/img/loader.png" alt="погрузчик" class="generalInfo__img" />
+
+            <article class="generalInfo__wrapper-text">
+              <h1 class="generalInfo__title">
+                электромобильный вилочный погрузчик
+                <span class="generalInfo__title_color">нового поколения SHANN</span>
+              </h1>
+              <h2 class="generalInfo__subtitle">
+                Оставьте заявку и получите консультацию специалиста
+              </h2>
+              <section class="generalInfo__wrapper-btn">
+                <button class="generalInfo__button button-get-offer">
+                  Получить предложение
+                </button>
+                <article class="generalInfo__wrapper-recall-time">
+                  <img src="./blocks/img/phone.svg" alt="phone" />
+                  <span>Перезвоним в течении дня для консультации</span>
+                </article>
+              </section>
+            </article>
+          </div>
+        </div>
+    </section>
+    <section class="technologies">
+      <div class="container">
+        <div class="technologies__content">
           <h3 class="technologies__title">
             эволюционные <span>технологии</span>
           </h3>
@@ -73,33 +63,27 @@
           </h4>
           <section class="technologies__wrappers-imgs">
             <article class="technologies__wrapper-img">
-              <img
-                src="./blocks/technologies/img/img2.png"
-                alt="img2"
-                class="technologies__img"
-              />
+              <img src="./blocks/technologies/img/img2.png" alt="img2" class="technologies__img" />
             </article>
             <article class="technologies__wrapper-img">
-              <img
-                src="./blocks/technologies/img/img1.png"
-                alt="img1"
-                class="technologies__img"
-              />
+              <img src="./blocks/technologies/img/img1.png" alt="img1" class="technologies__img" />
               <div class="technologies__description">
-                <img
-                  src="./blocks/technologies/img/arrow-left.svg"
-                  alt="стрелка влево"
-                  class="technologies__arrow-left"
-                />
+                <img src="./blocks/technologies/img/arrow-left.svg" alt="стрелка влево"
+                  class="technologies__arrow-left" />
                 Корпус изготовлен из высокопрочной стали
               </div>
             </article>
           </section>
-        </section>
-        <section class="engine">
-          <hr class="engine__line engine__line_first" />
-          <hr class="engine__line engine__line_second" />
-          <hr class="engine__line engine__line_third" />
+        </div>
+      </div>
+    </section>
+    <section class="engine">
+      <!-- <hr class="engine__line engine__line_first" />
+        <hr class="engine__line engine__line_second" />
+        <hr class="engine__line engine__line_third" /> -->
+
+      <div class="container">
+        <div class="engine__content">
           <h3 class="engine__title">
             двигатель <span class="engine__title_color">и АКБ</span>
           </h3>
@@ -125,15 +109,13 @@
               </ul>
             </article>
             <article class="engine__wrapper-img">
-              <img
-                src="./blocks/engine/img/engine.png"
-                alt="двигатель"
-                class="engine__img"
-              />
+              <img src="./blocks/engine/img/engine.png" alt="двигатель" class="engine__img" />
             </article>
           </section>
-        </section>
+        </div>
       </div>
-    </main>
-  </body>
+    </section>
+  </main>
+</body>
+
 </html>
