update styles generalInfo block

--- a/index.html
+++ b/index.html
@@ -8,13 +8,11 @@
   <link rel="stylesheet" href="./fonts/styles/fonts.css" />
   <link rel="stylesheet" href="./blocks/styles/styles.css" />
 </head>
-
 <body class="body">
-
   <main class="main">
     <section class="generalInfo">
       <div class="header">
-        <div class="container">
+        <div class="generalInfo__container">
           <section class="header__content">
             <img src="./blocks/header/img/logo.svg" alt="logo" class="header__logo" />
             <article class="header__container">
@@ -26,8 +24,8 @@
             </article>
           </section>
         </div>
-        </в>
-        <div class="container">
+        
+        <div class="generalInfo__container">
           <div class="generalInfo__content">
             <img src="./blocks/generalInfo/img/loader.png" alt="погрузчик" class="generalInfo__img" />
 
@@ -78,16 +76,13 @@
       </div>
     </section>
     <section class="engine">
-      <!-- <hr class="engine__line engine__line_first" />
-        <hr class="engine__line engine__line_second" />
-        <hr class="engine__line engine__line_third" /> -->
-
       <div class="container">
         <div class="engine__content">
-          <h3 class="engine__title">
+         
+          <section class="engine__wrapper-content">
+             <h3 class="engine__title">
             двигатель <span class="engine__title_color">и АКБ</span>
           </h3>
-          <section class="engine__wrapper-content">
             <article class="engine__wrapper-list">
               <ul class="engine__list">
                 <li class="engine__list-item">
