--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
   <title>SHANN</title>
   <link rel="stylesheet" href="./fonts/styles/fonts.css" />
   <link rel="stylesheet" href="./blocks/styles/styles.css" />
+  <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
 </head>
 <body class="body">
   <main class="main">
-    <section class="generalInfo">
+    <article class="generalInfo">
       <div class="header">
-        <div class="generalInfo__container">
+        <div class="container">
           <section class="header__content">
             <img src="./blocks/header/img/logo.svg" alt="logo" class="header__logo" />
             <article class="header__container">
@@ -24,6 +25,8 @@
             </article>
           </section>
         </div>
+      </div>
+
         
         <div class="generalInfo__container">
           <div class="generalInfo__content">
@@ -49,8 +52,8 @@
             </article>
           </div>
         </div>
-    </section>
-    <section class="technologies">
+    </article>
+    <article class="technologies" >
       <div class="container">
         <div class="technologies__content">
           <h3 class="technologies__title">
@@ -74,8 +77,8 @@
           </section>
         </div>
       </div>
-    </section>
-    <section class="engine">
+    </article>
+    <article class="engine" >
       <div class="container">
         <div class="engine__content">
          
@@ -109,7 +112,9 @@
           </section>
         </div>
       </div>
-    </section>
+    </article>
+      <script type="module" src="./blocks/script.js"></script>
+
   </main>
 </body>
 
