--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main class="main">
     <article class="generalInfo">
       <div class="header">
-        <div class="container">
+        <div class="generalInfo__container">
           <section class="header__content">
             <img src="./blocks/header/img/logo.svg" alt="logo" class="header__logo" />
             <article class="header__container">
