update structure of tecnologies blocks

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="technologies__content">
           <h3 class="technologies__title">
-            эволюционные <span>технологии</span>
+            эволюционные <span class="technologies__title_color">технологии</span>
           </h3>
           <h4 class="technologies__subtitle">
             Технологии электромобиля в вилочном погрузчике
