update styles of form and popup blocks

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             потребности и предложит идеальный погрузчик под ваши задачи.
           </h3>
           <form action="#" class="form">
-            <div class="form__wrapper-inputs">
+            <div class="form__wrapper-items">
               <p><input type="text" class="form__input" placeholder="Имя" /></p>
               <p>
                 <input type="tel" class="form__input" placeholder="Телефон" />
@@ -42,10 +42,12 @@
                 placeholder="Комментарий"
               />
             </p>
-            <button class="button-get-offer">Отправить заявку</button>
-            <div class="form__police">
-              Нажимая кнопку «Отправить заявку», вы соглашаетесь с
-              <a href="#" class="form__link"> Политикой конфиденциальности</a>
+            <div class="form__wrapper-bottom">
+              <button class="button-get-offer">Отправить заявку</button>
+              <div class="form__police">
+                Нажимая кнопку «Отправить заявку», вы соглашаетесь с
+                <a href="#" class="form__link"> Политикой конфиденциальности</a>
+              </div>
             </div>
           </form>
         </article>
