use pixel perfect fot large screen

--- a/index.html
+++ b/index.html
@@ -85,12 +85,10 @@
             />
 
             <article class="generalInfo__wrapper-text">
-              <h1 class="generalInfo__title">
-                электромобильный вилочный погрузчик
-                <span class="generalInfo__title_color"
-                  >нового поколения SHANN</span
-                >
-              </h1>
+              <h1 class="generalInfo__title">электромобильный 
+вилочный погрузчик <span class="generalInfo__title_color"
+                  >
+нового поколения SHANN</span></h1>
               <h2 class="generalInfo__subtitle">
                 Оставьте заявку и получите консультацию специалиста
               </h2>
@@ -173,7 +171,7 @@
               </article>
               <article class="engine__wrapper-img">
                 <img
-                  src="./blocks/engine/img/engine.png"
+                  src="./blocks/engine/img/engine_img.png"
                   alt="двигатель"
                   class="engine__img"
                 />
