use pixel perfect for popup on mobile devices

--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
           </h3>
           <form action="#" class="form">
             <div class="form__wrapper-items">
-              <p><input type="text" class="form__input" placeholder="Имя" /></p>
-              <p>
+              <p class="form__wrapper-input"><input type="text" class="form__input" placeholder="Имя" /></p>
+              <p class="form__wrapper-input">
                 <input type="tel" class="form__input" placeholder="Телефон" />
               </p>
-              <p>
+              <p class="form__wrapper-input">
                 <input type="email" class="form__input" placeholder="Email" />
               </p>
             </div>
