--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
     <title>SHANN</title>
     <link rel="stylesheet" href="./fonts/styles/fonts.css" />
     <link rel="stylesheet" href="./blocks/styles/styles.css" />
-    <script src="https://cdn.jsdelivr.net/npm/animejs@3.2.1/lib/anime.min.js"></script>
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://necolas.github.io/normalize.css/8.0.1/normalize.css"
+    />
     <script type="module" src="./blocks/script.js"></script>
   </head>
   <body class="body">
