--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 class="header__logo"
               />
               <article class="header__container">
-                <span class="header__phone-number">8 800 555 80 80</span>
+                <a href="8 800 555 80 80" class="header__phone-number">8 800 555 80 80</a>
                 <button class="header__button-call button-call">
                   <img
                     src="./blocks/img/phone.svg"
