--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               />
               <article class="header__container">
                 <a href="8 800 555 80 80" class="header__phone-number">8 800 555 80 80</a>
-                <button class="header__button-call button-call">
+                <button class="header__button-call button-call" id="btnCall">
                   <img
                     src="./blocks/img/phone.svg"
                     alt="phone"
@@ -97,7 +97,7 @@
                 Оставьте заявку и получите консультацию специалиста
               </h2>
               <section class="generalInfo__wrapper-btn">
-                <button class="generalInfo__button button-get-offer">
+                <button class="generalInfo__button button-get-offer" id="btnGetOffer">
                   Получить предложение
                 </button>
                 <article class="generalInfo__wrapper-recall-time">
